--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    <h1>Acceso denegado</h1>
+
+<body class="m-5">
+    <h1>Autorizacion SignIn</h1>
+    <hr>
+    <script src="https://accounts.google.com/gsi/client" async></script>
+    <div id="g_id_onload" data-client_id="892841398299-hlq1r87bhj471ajhc3kgrtd3pr9sv8rv.apps.googleusercontent.com"
+        data-auto_prompt="false" data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
+        data-shape="rectangular" data-logo_alignment="left">
+
+    </div>
+    <br>
+    <button id="btn_logout">
+        Cerrar Sesion
+    </button>
+    <script>
+        function handleCredentialResponse(response) {
+
+            const obj = { msg: 'Todo bien!', id_token: response.credential }
+            fetch('http://localhost:2000/api/auth/google', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(obj)
+            })
+                .then((res) => {
+                    return res.json()
+                })
+                .then((res) => {
+                    localStorage.setItem('email', res.usuario.correo);
+                })
+                .catch(console.warn);
+
+            const btnLogout = document.querySelector('#btn_logout');
+        
+            btnLogout.addEventListener('click', () => {
+                    google.accounts.id.revoke(localStorage.getItem('email'), done => {
+                        localStorage.clear();
+                        location.reload();
+                    });
+                    
+            })
+        }
+
+
+    </script>
 </body>
+
 </html>
